# planetary_terrain_renderer

./: .gitignore  Cargo.toml  README.md
assets/shaders/: spherical.wgsl
examples/: precision_demo.rs  spherical.rs
preprocess/: Cargo.toml  README.md
preprocess/examples/: preprocess_earth.rs  preprocess_los.rs  preprocess_spherical.rs  preprocess_swiss.rs
preprocess/src/: dataset.rs  fill_no_data.rs  lib.rs  main.rs
src/: lib.rs  plugin.rs  spawn.rs  terrain.rs  terrain_view.rs
src/debug/: approximation_debug.rs  camera.rs  metal_capture.rs  mod.rs  orbital_camera.rs
src/formats/: mod.rs  tiff.rs
src/math/: coordinate.rs  mod.rs  surface_approximation.rs  terrain_shape.rs
src/picking/: mod.rs
src/preprocess/: mipmap.rs  mod.rs
src/render/: mod.rs  terrain_bind_group.rs  terrain_material.rs  terrain_pass.rs  terrain_view_bind_group.rs  tiling_prepass.rs
src/shaders/: attachments.wgsl  bindings.wgsl  debug.wgsl  functions.wgsl  mod.rs  types.wgsl
src/shaders/entry_points/: fragment.wgsl  mipmap.wgsl  picking.wgsl  prepass.wgsl  vertex.wgsl
src/shaders/render/: fragment.wgsl  vertex.wgsl
src/shaders/tiling_prepass/: prepare_prepass.wgsl  refine_tiles.wgsl
src/terrain_data/: attachment.rs  gpu_attachment.rs  gpu_tile_atlas.rs  mod.rs  tile_atlas.rs  tile_loader.rs  tile_tree.rs
