[package]
name = "bevy_terrain"
description = "Terrain Rendering for the Bevy Engine."
version = "0.1.0-dev"
license = "MIT OR Apache-2.0"
edition = "2024"
categories = ["game-engines", "rendering", "graphics"]
keywords = ["gamedev", "graphics", "bevy", "terrain"]
exclude = ["assets/*"]
readme = "README.md"
authors = ["Kurt Kühnert <kurt@kuehnert.dev>"]
repository = "https://github.com/kurtkuehnert/bevy_terrain"

[workspace]
members = ["preprocess"]

[features]
high_precision = ["dep:big_space"]
rand = ["dep:rand"]

[dependencies]
bevy = "0.16.0-rc.3" #{ git="https://github.com/bevyengine/bevy/", branch="main" }
bevy_common_assets = { git = "https://github.com/kurtkuehnert/bevy_common_assets", branch = "bevy-0.16", features = ["ron"] } # { version = "0.12.0", features = ["ron"] }
big_space = { git = "https://github.com/bushrat011899/big_space", branch = "no_std", features = ["i32"], optional = true }  #{ version = "0.9", optional = true }
tiff = "0.9"
bytemuck = "1.14"
ndarray = "0.16.1"
itertools = "0.14.0"
bitflags = "2.4"
serde = "1.0.210"
async-channel = "2.1"
derive_more = { version = "2.0.1", features = ["from"] }
slab = "0.4.9"
rand = { version = "0.9.0", optional = true }
strum = "0.27.1"
strum_macros = "0.27.1"


[[example]]
name = "spherical"
path = "examples/spherical.rs"
required-features = ["high_precision"]

[[example]]
name = "precision_demo"
path = "examples/precision_demo.rs"
required-features = ["high_precision", "rand"]
