[package]
name = "bevy_terrain"
description = "Terrain Rendering for the Bevy Engine."
version = "0.1.0-dev"
license = "MIT OR Apache-2.0"
edition = "2024"
categories = ["game-engines", "rendering", "graphics"]
keywords = ["gamedev", "graphics", "bevy", "terrain"]
exclude = ["assets/*"]
readme = "README.md"
authors = ["Kurt Kühnert <kurt@kuehnert.dev>"]
repository = "https://github.com/kurtkuehnert/bevy_terrain"

[workspace]
members = ["preprocess"]

[features]
rand = ["dep:rand"]
metal_capture = ["dep:metal", "dep:wgpu-core"]

[dependencies]
bevy = "0.16.0"
bevy_common_assets = { version = "0.13.0", features = ["ron"] }
big_space = { version = "0.10", features = ["i32"] }
tiff = "0.10"
bytemuck = "1.14"
ndarray = "0.16.1"
itertools = "0.14.0"
bitflags = "2.4"
serde = "1.0.210"
async-channel = "2.1"
slab = "0.4.9"
strum = "0.27.1"
strum_macros = "0.27.1"

rand = { version = "0.9.0", optional = true }
metal = { version = "0.31.0", optional = true } # keep in sync with bevy's wgpu
wgpu-core = { version = "24.0.2", optional = true } # keep in sync with bevy's wgpu

[[example]]
name = "spherical"
path = "examples/spherical.rs"

[[example]]
name = "precision_demo"
path = "examples/precision_demo.rs"
required-features = ["rand"]
